--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>ru.kata</groupId>
-	<artifactId>Task_3_1_3</artifactId>
+	<artifactId>SpringBootstrap</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Task_3_1_3</name>
+	<name>SpringBootstrap</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
